--- a/src/components/Floater.astro
+++ b/src/components/Floater.astro
@@ -31,7 +31,7 @@ const isActive = (href: string) => {
 };
 ---
 
-<div class="flex justify-center items-center mb-8 md:mb-12 px-4">
+<div class="flex justify-center items-center mb-8 px-4">
   <nav
     class="flex transition-all ease-in-out gap-2 bg-bg-secondary/50 backdrop-blur-sm px-2 py-2 border border-border-primary/50 rounded-lg overflow-x-auto shadow"
   >
